--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "downshift": "^3.2.10",
     "echarts": "^4.2.1",
     "echarts-for-react": "^2.0.15-beta.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "firebase": "^6.6.1",
     "history": "^4.10.0",
     "lodash": "^4.17.15",
@@ -26,6 +28,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "notistack": "^0.8.8",
+    "path": "^0.12.7",
     "qwest": "^4.5.0",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.2",
