--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
 	"private": false,
 	"dependencies": {
 		"@date-io/date-fns": "^1.3.6",
-		"@material-ui/core": "^4.3.1",
+		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.2.1",
 		"@material-ui/lab": "^4.0.0-alpha.22",
 		"@material-ui/pickers": "^3.2.2",
 		"autosuggest-highlight": "^3.1.1",
 		"axios": "^0.19.0",
 		"babel-polyfill": "^6.26.0",
+		"bootstrap": "^4.5.3",
 		"clsx": "^1.0.4",
 		"css-vars-ponyfill": "^2.1.2",
 		"date-fns": "^2.0.0-alpha.34",
