--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"css-vars-ponyfill": "^2.1.2",
 		"date-fns": "^2.0.0-alpha.34",
 		"downshift": "^3.2.10",
+		"easyinvoice": "^1.0.103",
 		"echarts": "^4.2.1",
 		"echarts-for-react": "^2.0.15-beta.0",
 		"express": "^4.17.1",
@@ -36,6 +37,7 @@
 		"react-autosuggest": "^9.4.3",
 		"react-beautiful-dnd": "^11.0.4",
 		"react-big-calendar": "^0.22.0",
+		"react-csv": "^2.0.3",
 		"react-dom": "^16.8.6",
 		"react-google-maps": "^9.4.5",
 		"react-helmet": "^5.2.1",
@@ -51,6 +53,7 @@
 		"react-router-dom": "^5.0.0",
 		"react-scripts": "3.0.1",
 		"react-select": "^3.0.4",
+		"react-to-print": "^2.11.0",
 		"react-vis": "^1.11.7",
 		"recharts": "^1.6.2",
 		"redux": "^4.0.1",
