--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"easyinvoice": "^1.0.103",
 		"echarts": "^4.2.1",
 		"echarts-for-react": "^2.0.15-beta.0",
+		"emailjs-com": "^2.6.3",
 		"express": "^4.17.1",
 		"express-favicon": "^2.0.1",
 		"firebase": "^6.6.1",
