--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
 		"shortid": "^2.2.14",
+		"socket.io-client": "^3.0.2",
 		"swiper": "^4.5.0",
 		"victory": "^32.3.3"
 	},
