--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"react-helmet": "^5.2.1",
 		"react-highlight": "^0.12.0",
 		"react-html-parser": "^2.0.2",
+		"react-images-upload": "^1.2.8",
 		"react-infinite-scroller": "^1.2.4",
 		"react-loadable": "^5.5.0",
 		"react-material-ui-form-validator": "^2.0.9",
